correct appendix table of contents presentation titletoc

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,4 +1,4 @@
-\appendix
+\begin{appendices}
 \chapter{Introduction to Machine Learning}\label{appx:introMachineLearning}
 
 \section{Heaviside Function}\label{appx:sec:heaviside}
@@ -441,3 +441,4 @@ This is why smooth loss functions play an important part here in providing a fea
 
 %\section{Foo }\label{Bar}
 
+\end{appendices}
