--- a/preamble.tex
+++ b/preamble.tex
@@ -165,8 +165,8 @@ height=21cm,top=3.7cm,headsep=1cm,footskip=1.1cm]{geometry}
 % Solve bad interaction between titlesec and \
 \preto{\appendix}{\cleardoublepage}
 
-\usepackage[toc,page]{appendix}
-
+% titletoc will prefix the word `Appendix` for each appx chapter.
+\usepackage[titletoc,page]{appendix}
 % this might insert blank pages here and there but now compilation works correctly with biber
 \usepackage[style=american]{csquotes}  % Language sensitive quotation facilities
 \usepackage[style=authoryear-comp,backref=true,refsection=chapter,backend=biber]{biblatex}
