--- a/main.tex
+++ b/main.tex
@@ -40,9 +40,10 @@
 
 \backmatter
 	\printbibheading[heading=bibbook]
-tm	\bibbysection[heading=subbib]
+%tm	
+	\bibbysection[heading=subbib]
 	
-\frontmatter
+%\frontmatter
 \include{appendix}
   % \printindex
 \end{document}
