--- a/appendix.tex
+++ b/appendix.tex
@@ -1,5 +1,5 @@
 \begin{appendices}
-\chapter{Introduction to Machine Learning}\label{appx:introMachineLearning}
+\chapter{- Introduction to Machine Learning}\label{appx:introMachineLearning}
 
 \section{Heaviside Function}\label{appx:sec:heaviside}
 
@@ -54,7 +54,7 @@ With this formulation, we can take any optimization procedure that benefits from
 
 
 
-\chapter{Model Selection}
+\chapter{- Model Selection}
 
 \section{Extension of bias and variance to other loss functions}\label{appx:sec:biasVarianceExtensionLoss}
 
@@ -291,7 +291,7 @@ Consensus\footnote{\textcite{hastie-elemstatslearn} P.
 
 
 
-\chapter{Ensemble Methods \& Naive Bayes Classifier}\label{appx:ensembleBayes}
+\chapter{- Ensemble Methods \& Naive Bayes Classifier}\label{appx:ensembleBayes}
 
 \section{Decision Tree Pruning}\label{appx:sec:tree_pruning}
 
@@ -436,7 +436,6 @@ This is why smooth loss functions play an important part here in providing a fea
 
 %This equation form results in a direct method for a greedy optimization approach. We will have to search for the tree $f_t$ that minimizes \\
 %$\sum_i^n { g_i f_t(x_i) + \frac{1}{2} h_i f_t(x_i)^2 } + R(f_t)$ at the $t$-th step.
-
 
 
 %\section{Foo }\label{Bar}
