--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -598,7 +598,7 @@ Four metrics were cross-validated and compared in this experiment: $Accuracy$, $
 \toprule
 Metric & Best $C$ value & Mean CV score & Test score & Full CV time (s)  \\
 \midrule
-$Accuracy$ & 3.162 & 0.685 & 0.695 & 4628.3  \\
+$Accuracy$ & 0.316 & 0.685 & 0.695 & 4628.3  \\
 $Recall$ & 0.107 & 0.637 & 0.612 & 4638.2 \\
 $Precision$ & 0.0006 & 0.038 & 0.035 & 4667.5 \\
 $F1$ & 0.0015 & 0.071 & 0.005 & 4612.1 \\
@@ -606,7 +606,7 @@ $F1$ & 0.0015 & 0.071 & 0.005 & 4612.1 \\
 \end{tabular*}
 \end{table}
 
-It is clear from these results that all metrics favor stronger regularized models, except for the $Accuracy$ metric which favored a very loosely regularized model in the CV procedure.
+It is clear from these results that all metrics favor stronger regularized models, except for the $Accuracy$ metric which favored the least regularized models of all CV procedures.
 
 %that there are no significant time differences in choosing one metric over another. 
 Added to this, 
